force-app/main/default/objects/Asset/fields/health_score__c.field-meta.xml
<CustomField>
    <fullName>health_score__c</fullName>
    <description>Health score percentage for the asset (0-100%)</description>
    <inlineHelpText>Overall health score of the asset based on performance metrics</inlineHelpText>
    <label>Health Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>