force-app/main/default/objects/Asset/fields/hub_location__c.field-meta.xml
<CustomField>
    <fullName>hub_location__c</fullName>
    <description>Geographic hub location for this asset</description>
    <inlineHelpText>The hub city or location where this asset is deployed (e.g., Singapore, Kuala Lumpur)</inlineHelpText>
    <label>Hub Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>