force-app/main/default/objects/Asset/fields/maintenance_priority__c.field-meta.xml
<CustomField>
    <fullName>maintenance_priority__c</fullName>
    <description>Maintenance priority level for this asset</description>
    <inlineHelpText>Priority level for maintenance actions on this asset</inlineHelpText>
    <label>Maintenance Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>